--- a/src/about.html
+++ b/src/about.html
@@ -12,24 +12,26 @@
 
   <main>
     <header>
-      <a href="../index.html">
-        <img src="../linkpage/kuromi.png" alt="headphoto">
-      </a>
-
-      <div>
-        <ol>
-          <li>Full stack engineer</li>
-          <li>Information Technology</li>
-        </ol>
-        <ul>
-          <li>Beautiful</li>
-          <li>Clever</li>
-          <li>Strong</li>
-        </ul>
+      <h1>About Me</h1>
+      <div class="introduction">
+        <a href="../index.html">
+          <img src="../img/profile.jpeg" alt="headphoto">
+        </a>
+        <div>
+          <ol>
+            <li>Full Stack Engineer</li>
+            <li>Information Technology</li>
+          </ol>
+          <ul>
+            <li>Beautiful</li>
+            <li>Clever</li>
+            <li>Strong</li>
+          </ul>
+        </div>
       </div>
     </header>
 
-    <p>
+    <p class="paragraph">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium nostrum asperiores assumenda quaerat recusandae cum libero ad delectus sed fugit ab illo atque soluta iure optio quis ratione in, nulla perferendis quas explicabo quia saepe? Porro at suscipit adipisci, asperiores quidem quia nemo impedit, repellendus corrupti cupiditate molestiae! Facilis odit porro dolores ipsa ipsam ut velit doloremque perspiciatis quidem asperiores? Quisquam voluptate sed excepturi deserunt architecto cum eius velit impedit quos amet sunt veritatis, dicta officia nostrum aspernatur voluptatibus natus quae? Quo eligendi suscipit aliquid asperiores quos qui eaque, ut maiores natus eveniet repellat sequi dicta at sit cumque, ex minus, nobis ratione. Nisi, excepturi impedit illum est rerum reprehenderit enim, suscipit assumenda quaerat eius aliquid voluptas, quas blanditiis alias quisquam. Accusantium tempore a at nisi totam amet placeat, id explicabo doloribus fugit quia saepe aspernatur perferendis minima numquam nesciunt ullam est sed repudiandae magnam ex fugiat non corrupti distinctio. Maxime reprehenderit unde distinctio beatae rem tenetur, dolor magnam soluta itaque fugit iste eum deserunt aut illo corporis repellendus. In itaque cupiditate quod sunt et, officia necessitatibus omnis at numquam molestias incidunt. At, atque numquam. Ratione excepturi facere aspernatur quis soluta blanditiis vitae! Facilis dolorem laudantium ipsum ipsa non id.
     </p>
 
@@ -46,35 +48,34 @@
         </tr>
       </thead>
       <tbody>
-        <tr class="table-blue">
+        <tr>
           <th scope="row">1</th>
-          <td rowspan="2">1</td>
-          <td>2</td>
-          <td>3</td>
-          <td>4</td>
+          <td class="table-blue" rowspan="2">2017</td>
+          <td>Student union</td>
+          <td>Leader</td>
+          <td class="table-blue" rowspan="2">Good</td>
         </tr>
         <tr>
           <th scope="row">2</th>
-          <td>2</td>
-          <td>3</td>
-          <td>4</td>
+          <td>Company intern</td>
+          <td>Intern</td>
         </tr>
-        <tr class="table-blue">
+        <tr>
           <th scope="row">3</th>
-          <td>1</td>
+          <td>2018</td>
           <td>2</td>
-          <td colspan="2">3</td>
+          <td class="table-pink" colspan="2">Postgraduate</td>
         </tr>
         <tr>
           <th scope="row">4</th>
-          <td>1</td>
+          <td>2019</td>
           <td>2</td>
           <td>3</td>
           <td>4</td>
         </tr>
-        <tr class="table-blue">
+        <tr>
           <th scope="row">5</th>
-          <td>1</td>
+          <td>2020</td>
           <td>2</td>
           <td>3</td>
           <td>4</td>
@@ -82,7 +83,10 @@
       </tbody>
       <tfoot></tfoot>
     </table>
-    <a href="../index.html">Go Back to Home</a>
+    <div class="go_back_to_home">
+      <a href="../index.html"><span>Go Back to Home</span></a>
+    </div>
+    
   </main>
   
 </body>
